# hmw1_mnlp_cultural_classifier

./: .gitignore  README.md  environment.yaml  pyproject.toml  setup_env.py
configs/: llm_exp1.yaml  llm_exp1_cpu.yaml  setup.yaml  w2v_exp1_cpu.yaml
configs/collator/: w2v_collator.yaml
configs/dataset/: train_llm_cultural_dataset.yaml  train_w2v_cultural_dataset.yaml  validation_llm_cultural_dataset.yaml  validation_w2v_cultural_dataset.yaml
configs/model/: llm_cultural_model.yaml  w2v_cultural_model.yaml
configs/model_config/: llm_cultural_config.yaml
configs/predictor/: cultural_predictor.yaml
configs/tokenizer/: distil_bert_tokenizer.yaml
configs/trainer/: cultural_trainer.yaml  w2v_cultural_trainer.yaml
docs/: nlp_hw1_report.tex
notebooks/: hmw_local.ipynb  test1.ipynb
src/hmw1_mnlp_cultural_classifier/dataset/: cultural_dataset.py  llm_cultural_dataset.py  text_builder.py  w2v_collator.py  w2v_cultural_dataset.py
src/hmw1_mnlp_cultural_classifier/embedder/: w2v_embedder.py
src/hmw1_mnlp_cultural_classifier/labels_schema/: cultural_labels.py
src/hmw1_mnlp_cultural_classifier/model/: llm_cultural_model.py  w2v_cultural_model.py
src/hmw1_mnlp_cultural_classifier/prediction/: cultural_predictor.py
src/hmw1_mnlp_cultural_classifier/runs/: dataset_test.py  model_load_test.py  prediction_run.py  push_to_hub.py  trained_prediction_run.py  training_run.py
src/hmw1_mnlp_cultural_classifier/tokenizer/: base_tokenizer.py  distil_bert_tokenizer.py  simple_tokenizer.py
src/hmw1_mnlp_cultural_classifier/training/: cultural_trainer.py  (+1 more)
(+6 files in other folders)
