[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "HMW1_2025"
version = "0.1.0"
description = "Deep Learning Homework 1 library"
authors = [
    { name="Your Name", email="your@email.com" }
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]